--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -19,9 +19,16 @@ $helvetica: Helvetica, Arial, sans-serif;
 $helveticaNeue: "Helvetica Neue", Helvetica, Arial, sans-serif;
 $georgia: Georgia, serif;
 
-// Mobile breakpoints
-@mixin mobile {
-  @media screen and (max-width: 640px) {
+@mixin small {
+  @media screen and (max-width: 992px) {
     @content;
   }
 }
+
+// Mobile breakpoints
+@mixin mobile {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+
